[gd_scene load_steps=5 format=3 uid="uid://bcltx0r4cig8q"]

[ext_resource type="Script" uid="uid://cwo13ej7opai" path="res://scripts/BreakablePlatform.gd" id="1_drt83"]
[ext_resource type="PackedScene" uid="uid://dlrq4knk1gqi7" path="res://scenes/StonePlatform.tscn" id="1_nhwjf"]
[ext_resource type="PackedScene" uid="uid://bcptidnpns0k8" path="res://scenes/BubblesSpawner.tscn" id="2_c35xr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ra307"]
size = Vector3(14, 0.65, 14)

[node name="BreakablePlatform" type="Area3D"]
script = ExtResource("1_drt83")
target_position = Array[Vector3]([Vector3(-6.5, 0.25, -6.5), Vector3(6.6, 0.25, -6.5), Vector3(-6.5, 0.25, 6.5), Vector3(6.5, 0.25, 6.5)])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_ra307")
disabled = true

[node name="stone1" parent="." node_paths=PackedStringArray("neighbors") groups=["small_platform"] instance=ExtResource("1_nhwjf")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.85986, 0, -2.01459)
visible = false
neighbors = [NodePath("../stone2"), NodePath("../stone3"), NodePath("../stone4")]
radius = 6
health = 0

[node name="stone2" parent="." node_paths=PackedStringArray("neighbors") groups=["small_platform"] instance=ExtResource("1_nhwjf")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1.92175, 0, -2.10743)
visible = false
neighbors = [NodePath("../stone1"), NodePath("../stone3"), NodePath("../stone4")]
radius = 6
health = 0

[node name="stone3" parent="." node_paths=PackedStringArray("neighbors") groups=["small_platform"] instance=ExtResource("1_nhwjf")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -2.04553, 0, 1.98364)
visible = false
neighbors = [NodePath("../stone1"), NodePath("../stone2"), NodePath("../stone4")]
radius = 6
health = 0

[node name="stone4" parent="." node_paths=PackedStringArray("neighbors") groups=["small_platform"] instance=ExtResource("1_nhwjf")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 2.26216, 0, 2.01459)
visible = false
neighbors = [NodePath("../stone1"), NodePath("../stone2"), NodePath("../stone3")]
radius = 6
health = 0

[node name="BubblesSpawner" parent="." instance=ExtResource("2_c35xr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
inner_circle = Array[Vector3]([Vector3(-6.5, 4, -6.5), Vector3(0, 4, -6.5), Vector3(6.5, 4, -6.5), Vector3(6.5, 4, 0), Vector3(6.5, 4, 6.5), Vector3(0, 4, 6.5), Vector3(-6.5, 4, 6.5), Vector3(-6.5, 4, 0)])
outer_circle = Array[Vector3]([Vector3(-6.5, 4, -13.5), Vector3(0, 4, -13.5), Vector3(6.5, 4, -13.5), Vector3(13.5, 4, -6.5), Vector3(13.5, 4, 0), Vector3(13.5, 4, 6.5), Vector3(6.5, 4, 13.5), Vector3(0, 4, 13.5), Vector3(-6.5, 4, 13.5), Vector3(-13.5, 4, 6.5), Vector3(-13.5, 4, 0), Vector3(-13.5, 4, -6.5)])
